# chip8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chip8.cpp  chip8.h  main.cpp  platform.h
